# msfce

./: .clang-format  .gitignore  CMakeLists.txt  README.md  frag.glsl
.github/workflows/: build.yml
app/: CMakeLists.txt  controller_sdl2.h  frontend.h  frontend_sdl2.cpp  frontend_sdl2.h  main.cpp  recorder.cpp  recorder.h  renderer_gl.cpp  renderer_gl.h
app/frontend_sdl2/: controller_sdl2.cpp  frontend_sdl2.cpp  frontend_sdl2.h
app/recorder/: framerecorder.cpp  framerecorder.h  imagerecorder.cpp  imagerecorder.h  recorder.cpp  recorder.h  recorder_utils.h  videorecorder.cpp  videorecorder.h
core/: CMakeLists.txt  apu.cpp  apu.h  controller.cpp  dma.h  log.cpp  maths.cpp  maths.h  membus.cpp  memcomponent.cpp  memcomponent.h  ppu.cpp  schedulertask.h  snes.h  snes_renderer.h  timings.h
core/include/msfce/core/: controller.h  log.h  renderer.h  snes.h
core/src/: 65816.cpp  65816.h  apu.cpp  apu.h  controllerports.cpp  controllerports.h  dma.cpp  dma.h  log.cpp  maths.cpp  maths.h  membus.cpp  membus.h  memcomponent.cpp  memcomponent.h  ppu.cpp  ppu.h  registers.h  scheduler.h  schedulertask.cpp  schedulertask.h  snesimpl.cpp  snesimpl.h  sram.cpp  sram.h  timings.h  utils.h  wram.cpp  wram.h
extras/: build-macos.sh  build-mingw64.sh  mingw64-toolchain.cmake
mingw64/: .gitignore  build_deps.sh  meson-toolchain.ini
mingw64/glm/: glm.pc.in
mingw64/opus/: 0001-configure-Disable-FORTIFY_SOURCE.patch
scripts/: clang_format.sh
src/: 65816.cpp  65816.h  CMakeLists.txt  apu.cpp  apu.h  controller.cpp  controller.h  dma.cpp  dma.h  frontend.h  frontend_dummy.cpp  frontend_dummy.h  frontend_sdl2.cpp  frontend_sdl2.h  log.cpp  log.h  main.cpp  maths.cpp  maths.h  membus.cpp  membus.h  memcomponent.cpp  memcomponent.h  ppu.cpp  ppu.h  recorder.cpp  recorder.h  registers.h  scheduler.cpp  scheduler.h  schedulertask.cpp  schedulertask.h  snes.cpp  snes.h  snes_renderer.h  sram.cpp  sram.h  timings.h  utils.h  wram.cpp  (+1 more)
tests/: CMakeLists.txt  membus_unittest.cpp
toolchain/: Dockerfile  build_toolchain.sh  environment-setup  fix_rootfs.sh  raspi.conf
